---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/tidscan.sql
---
create table tidscan (id int);

insert into tidscan values (1), (2), (3);

select ctid, * from tidscan;

select ctid, * from tidscan where ctid = '(0,1)';

select ctid, * from tidscan where ctid = '(0,1)';

select ctid, * from tidscan where '(0,1)' = ctid;

select ctid, * from tidscan where '(0,1)' = ctid;

select ctid, * from tidscan where ctid = '(0,2)' or '(0,1)' = ctid;

select ctid, * from tidscan where ctid = '(0,2)' or '(0,1)' = ctid;

select ctid, * from tidscan where ctid = any (cast(array['(0,1)', '(0,2)'] as tid[]));

select ctid, * from tidscan where ctid = any (cast(array['(0,1)', '(0,2)'] as tid[]));

select ctid, * from tidscan where ctid <> any (cast(array['(0,1)', '(0,2)'] as tid[]));

select ctid, * from tidscan where ctid <> any (cast(array['(0,1)', '(0,2)'] as tid[]));

select
  ctid,
  *
from
  tidscan
where
  (id = 3 and ctid in ('(0,2)', '(0,3)')) or
  (ctid = '(0,1)' and id = 1);

select
  ctid,
  *
from
  tidscan
where
  (id = 3 and ctid in ('(0,2)', '(0,3)')) or
  (ctid = '(0,1)' and id = 1);

set enable_hashjoin = off;

select
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
from
  tidscan as t1
  inner join
    tidscan as t2
  on t1.ctid = t2.ctid
where
  t1.id = 1;

select
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
from
  tidscan as t1
  inner join
    tidscan as t2
  on t1.ctid = t2.ctid
where
  t1.id = 1;

select
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
from
  tidscan as t1
  left outer join
    tidscan as t2
  on t1.ctid = t2.ctid
where
  t1.id = 1;

select
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
from
  tidscan as t1
  left outer join
    tidscan as t2
  on t1.ctid = t2.ctid
where
  t1.id = 1;

reset enable_hashjoin;

begin;

declare "c"
cursor
for select
  ctid,
  *
from
  tidscan
where
  ctid = any (cast(array['(0,1)', '(0,2)'] as tid[]));;

fetch forward all from c;

fetch prior from c;

fetch absolute 1 from c;

rollback;

begin;

declare "c" cursor for select ctid, * from tidscan;;

fetch next from c;

fetch next from c;

update tidscan set id = -id where current of c returning *;

fetch next from c;

update tidscan set id = -id where current of c returning *;

select * from tidscan;

fetch next from c;

update tidscan set id = -id where current of c returning *;

rollback;

select COUNT(*) from tenk1 as t1 inner join tenk1 as t2 on t1.ctid = t2.ctid;

select COUNT(*) from tenk1 as t1 inner join tenk1 as t2 on t1.ctid = t2.ctid;

set enable_hashjoin = off;

select COUNT(*) from tenk1 as t1 inner join tenk1 as t2 on t1.ctid = t2.ctid;

select COUNT(*) from tenk1 as t1 inner join tenk1 as t2 on t1.ctid = t2.ctid;

reset enable_hashjoin;

begin isolation level serializable;

select * from tidscan where ctid = '(0,1)';

select locktype, mode from pg_locks where pid = pg_backend_pid() and mode = 'SIReadLock';

rollback;

drop table tidscan;
